home page done working on media page. downloaded big videos

--- a/media.html
+++ b/media.html
@@ -44,7 +44,14 @@
     </script>
   </header>
   <main>
-    
+    <div class="ratio ratio-16x9">
+  <video class="w-75 h-70 mx-auto" src="/REVIVAL.mov" title="YouTube video" allowfullscreen>
+</div>
+    <div class="revival">
+
+      <h2>REVIVAL</h2>
+      <h4>Time: 18 minutes 36 seconds</h4>
+    </div>
   </main>
   <footer>
     <h1 class="footer">ZACH BRYAN CONCERT 2025</h1>
