worked on video card

--- a/media.html
+++ b/media.html
@@ -44,14 +44,19 @@
     </script>
   </header>
   <main>
-    <div class="ratio ratio-16x9">
-  <video class="w-75 h-70 mx-auto" src="/REVIVAL.mov" title="YouTube video" allowfullscreen>
-</div>
-    <div class="revival">
 
-      <h2>REVIVAL</h2>
-      <h4>Time: 18 minutes 36 seconds</h4>
-    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div class="ratio ratio-16x9">
+            <div class="card" ;">
+              <video src="/REVIVAL.mov" class="rounded img img-fluid w-75 mx-auto d-block REVIVAL" allowfullscreen
+                autoplay alt="...">
+
+            </div>
+          </div>
+          <h2 class="card-text revival">REVIVAL</h2>
+          <h4 class="card-text revival">Time: 18 minutes 36 seconds</h4>
   </main>
   <footer>
     <h1 class="footer">ZACH BRYAN CONCERT 2025</h1>
