finished media page (not that good) started to work on outfit page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <img src="/ZachBryan.jpg" class="rounded img img-fluid w-75 mx-auto d-block" alt="...">
+          <img src="/ZachBryan.jpg" class="rounded img img-fluid w-75 mx-auto d-block zach-bryan" alt="...">
+          <!-- got img from "https://www.rollingstone.com/music/music-news/zach-bryan-uses-ticketmaster-for-2024-tour-1234818815/" -->
         </div>
         <div class="info">
           <h1>"The Quittin' Time Tour 2025"</h1>
