--- a/outfits.html
+++ b/outfits.html
@@ -44,7 +44,89 @@
     </script>
   </header>
   <main>
+    <div class="container text-center">
+      <h2>Outfits</h2>
+      <div class="row">
+        <div class="col-12 col-md-4 p-2">
+          <div class="card h-50">
+            <div class="card  mb-2">
+              <img src="/hat.png" class="card-img-top"
+                alt="hat">
+              <div class="card-body">
+                <p class="card-text">Cowgirl Hat</p>
+                <a href="https://www.amazon.com/dp/B09WHLP9MN?ref=cm_sw_r_cso_cp_apin_dp_AFKAQ97W5676KEXP5646_1&ref_=cm_sw_r_cso_cp_apin_dp_AFKAQ97W5676KEXP5646_1&social_share=cm_sw_r_cso_cp_apin_dp_AFKAQ97W5676KEXP5646_1&th=1&psc=1" class="btn btn-primary">Buy Me</a>
+              </div>
+            </div>
+          </div>
+        </div>
 
+        <div class="col-12 col-md-4 p-2">
+          <div class="card h-50">
+            <div class="card  mb-2">
+              <img src="/earings.png" class="card-img-top" alt="earings">
+              <div class="card-body">
+                <p class="card-text">Earings</p>
+                <a href="https://www.amazon.com/dp/B0C5MCCKVJ?ref=cm_sw_r_cso_cp_apin_dp_HBKVXYQXFZTMEG6CHMTS&ref_=cm_sw_r_cso_cp_apin_dp_HBKVXYQXFZTMEG6CHMTS&social_share=cm_sw_r_cso_cp_apin_dp_HBKVXYQXFZTMEG6CHMTS&titleSource=true&th=1" class="btn btn-primary">Buy Me</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 p-2">
+          <div class="card">
+            <div class="card mb-2">
+              <img src="PumpkinPie.jpg" class="card-img-top" alt="Pumpkin Pie">
+              <div class="card-body">
+                <p class="card-text">In the fall the farmers market there are very nice pumkins. They are very nice and
+                  fresh it will make a great pumpkin pie.</p>
+                <a href="https://tastesbetterfromscratch.com/pumpkin-pie-with-caramel-pecan-topping/"
+                  class="btn btn-primary">RECIPE</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6 mb-3 mb-sm-0">
+          <div class="card">
+            <div class="card-body">
+              <img src="1.jpg" class="d-block w-100" alt="boat">
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 mb-3 mb-sm-0">
+          <div class="card">
+            <div class="card-body">
+              <img src="1.jpg" class="d-block w-100" alt="boat">
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <h2>Merch</h2>
+      <div class="row">
+        <div class="col-sm-6 mb-3 mb-sm-0">
+          <div class="card">
+            <div class="card-body">
+              <img src="1.jpg" class="d-block w-100" alt="boat">
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 mb-3 mb-sm-0">
+          <div class="card">
+            <div class="card-body">
+              <img src="1.jpg" class="d-block w-100" alt="boat">
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
   <footer>
     <h1 class="footer">ZACH BRYAN CONCERT 2025</h1>
@@ -54,8 +136,10 @@
         <th scope="col">
           <h2>Social:</h2>
         </th>
-        <th scope="col"><a href="https://www.instagram.com/zachlanebryan/?hl=en"> <img src="/insta.png" alt=""></a></th>
-        <th scope="col"><a href="https://www.tiktok.com/@zachlanebryan?lang=en"> <img src="/tiktok.png" alt=""></a></th>
+        <th scope="col"><a href="https://www.instagram.com/zachlanebryan/?hl=en"> <img src="/insta.png" alt=""></a>
+        </th>
+        <th scope="col"><a href="https://www.tiktok.com/@zachlanebryan?lang=en"> <img src="/tiktok.png" alt=""></a>
+        </th>
       </tr>
   </footer>
   <!-- Bootstrap JavaScript Libraries -->
