think i finished want to make it prettier but want it on a bigger screen and see how it looks on different size screens.

--- a/outfits.html
+++ b/outfits.html
@@ -45,16 +45,18 @@
   </header>
   <main>
     <div class="container text-center">
-      <h2>Outfits</h2>
+      <h2 class="titles-outfits">Outfits</h2>
+      <p class="p-outfits">Click on the link to see where I got it from!!</p>
       <div class="row">
         <div class="col-12 col-md-4 p-2">
           <div class="card h-50">
             <div class="card  mb-2">
-              <img src="/hat.png" class="card-img-top"
-                alt="hat">
               <div class="card-body">
+                <a
+                  href="https://www.amazon.com/dp/B09WHLP9MN?ref=cm_sw_r_cso_cp_apin_dp_AFKAQ97W5676KEXP5646_1&ref_=cm_sw_r_cso_cp_apin_dp_AFKAQ97W5676KEXP5646_1&social_share=cm_sw_r_cso_cp_apin_dp_AFKAQ97W5676KEXP5646_1&th=1&psc=1">
+                  <img src="/hat.png" class="card-img-top" alt="hat"></a>
+
                 <p class="card-text">Cowgirl Hat</p>
-                <a href="https://www.amazon.com/dp/B09WHLP9MN?ref=cm_sw_r_cso_cp_apin_dp_AFKAQ97W5676KEXP5646_1&ref_=cm_sw_r_cso_cp_apin_dp_AFKAQ97W5676KEXP5646_1&social_share=cm_sw_r_cso_cp_apin_dp_AFKAQ97W5676KEXP5646_1&th=1&psc=1" class="btn btn-primary">Buy Me</a>
               </div>
             </div>
           </div>
@@ -63,23 +65,24 @@
         <div class="col-12 col-md-4 p-2">
           <div class="card h-50">
             <div class="card  mb-2">
-              <img src="/earings.png" class="card-img-top" alt="earings">
               <div class="card-body">
+                <a
+                  href="https://www.amazon.com/dp/B0C5MCCKVJ?ref=cm_sw_r_cso_cp_apin_dp_HBKVXYQXFZTMEG6CHMTS&ref_=cm_sw_r_cso_cp_apin_dp_HBKVXYQXFZTMEG6CHMTS&social_share=cm_sw_r_cso_cp_apin_dp_HBKVXYQXFZTMEG6CHMTS&titleSource=true&th=1">
+                  <img src="/earings.png" class="card-img-top" alt="earings"></a>
+
                 <p class="card-text">Earings</p>
-                <a href="https://www.amazon.com/dp/B0C5MCCKVJ?ref=cm_sw_r_cso_cp_apin_dp_HBKVXYQXFZTMEG6CHMTS&ref_=cm_sw_r_cso_cp_apin_dp_HBKVXYQXFZTMEG6CHMTS&social_share=cm_sw_r_cso_cp_apin_dp_HBKVXYQXFZTMEG6CHMTS&titleSource=true&th=1" class="btn btn-primary">Buy Me</a>
               </div>
             </div>
           </div>
         </div>
         <div class="col-12 col-md-4 p-2">
-          <div class="card">
+          <div class="card h-50">
             <div class="card mb-2">
-              <img src="PumpkinPie.jpg" class="card-img-top" alt="Pumpkin Pie">
               <div class="card-body">
-                <p class="card-text">In the fall the farmers market there are very nice pumkins. They are very nice and
-                  fresh it will make a great pumpkin pie.</p>
-                <a href="https://tastesbetterfromscratch.com/pumpkin-pie-with-caramel-pecan-topping/"
-                  class="btn btn-primary">RECIPE</a>
+                <a
+                  href="https://www.amazon.com/dp/B09WHLP9MN?ref=cm_sw_r_cso_cp_apin_dp_AFKAQ97W5676KEXP5646_1&ref_=cm_sw_r_cso_cp_apin_dp_AFKAQ97W5676KEXP5646_1&social_share=cm_sw_r_cso_cp_apin_dp_AFKAQ97W5676KEXP5646_1&th=1&psc=1">
+                  <img src="/boots.png" class="card-img-top" alt="boots"></a>
+                <p class="card-text">Boots</p>
               </div>
             </div>
           </div>
@@ -87,41 +90,46 @@
       </div>
       <div class="row">
         <div class="col-sm-6 mb-3 mb-sm-0">
-          <div class="card">
+          <div class="card h-70">
             <div class="card-body">
-              <img src="1.jpg" class="d-block w-100" alt="boat">
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a
+                href="https://www.amazon.com/dp/B09WHLP9MN?ref=cm_sw_r_cso_cp_apin_dp_AFKAQ97W5676KEXP5646_1&ref_=cm_sw_r_cso_cp_apin_dp_AFKAQ97W5676KEXP5646_1&social_share=cm_sw_r_cso_cp_apin_dp_AFKAQ97W5676KEXP5646_1&th=1&psc=1">
+                <img src="/shirt.png" class="card-img-top" alt="shirt"></a>
+              <p class="card-text">Shirt</p>
+              <p class="s">Got it from forever 21 but cant find the link so similar one is from amazon. </p>
             </div>
           </div>
         </div>
         <div class="col-sm-6 mb-3 mb-sm-0">
-          <div class="card">
+          <div class="card h-70">
             <div class="card-body">
-              <img src="1.jpg" class="d-block w-100" alt="boat">
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a
+                href="https://www.amazon.com/DEICAEVO-Skirts-Casual-Stretch-Waisted/dp/B0DFCGT34S/ref=sr_1_2_sspa?crid=1W9MHLBS0W3IH&dib=eyJ2IjoiMSJ9.k0u4aTVeRZmFJBqX4jHBnB-t24ZK8dPbtcZSD83NliwcZIFez_HS4_5t3IrcMYIudiHDjAi2B269y9SWyWa7LT5ue3DT7mATQ4JICmCkt6wG1vaoLNM9RcoBfodgzF0vrDJe05hRo9pJ4iub-DeZC1d242VrFgU3ZTNi9rGMUgnRdRRTyeBO9sCX7fxUfp5_hCGeZmbowZF0JWbeSBofKnstP3jcGD8cDGwt6wh_0Oahc56kHx6Dg1U-GO7hCVse7KVC4NxWPKgqQgxU0xNrpCnuCcPJRzHVLm6Ut7qDsq0.WKQxrOmGCdNA_b4_kD5q7b7G60ByMc19Qqr8EzLy4Cc&dib_tag=se&keywords=jean%2Bskirts&qid=1758742085&sprefix=jean%2Bskirt%2Caps%2C211&sr=8-2-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY&th=1&psc=1">
+                <img src="/skirt.png" class="card-img-top" alt="skirt"></a>
+              <p class="card-text">Skirt</p>
+              <p class="s">Borrowed from my friend dont know where it is from. You can find a similar one on amazon.
+              </p>
             </div>
           </div>
         </div>
       </div>
-      <h2>Merch</h2>
+      <h2 class="titles-outfits">Merch</h2>
       <div class="row">
         <div class="col-sm-6 mb-3 mb-sm-0">
-          <div class="card">
+          <div class="card h-70">
             <div class="card-body">
-              <img src="1.jpg" class="d-block w-100" alt="boat">
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="https://merchzachbryan.com/products/zach-bryan-tour-merch-logo-camo-hoodie">
+                <img src="/sweatshirt.png" class="card-img-top" alt="sweatshirt"></a>
+              <p class="card-text">Sweatshirt</p>
             </div>
           </div>
         </div>
         <div class="col-sm-6 mb-3 mb-sm-0">
-          <div class="card">
+          <div class="card h-60">
             <div class="card-body">
-              <img src="1.jpg" class="d-block w-100" alt="boat">
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="https://zachbryanshop.com/products/zach-bryan-2025-lightning-tee">
+                <img src="/t-shirt.png" class="card-img-top" alt="t-shirt"></a>
+              <p class="card-text">T-Shirt</p>
             </div>
           </div>
         </div>
