--- a/setlist.html
+++ b/setlist.html
@@ -44,7 +44,38 @@
     </script>
   </header>
   <main>
+    <h2>Setlist: </h2>
+    <ol>
+      <li>Overtime</li>
+      <li>Open the Gate</li>
+      <li>God Speed</li>
+      <li>28</li>
+      <li>Fifth of May</li>
+      <li>Oklahoma Smokeshow</li>
+      <li>Dawns</li>
+      <li>Condemned</li>
+      <li>A Song For You (Live debute) </li>
+      <li>Boys of Faith</li>
+      <li>East Side of Sorrow</li>
+      <li>Madeline (with Gabrielle Rosen)</li>
+      <li>American Nights</li>
+      <li>Billy Stay (Zach and Reed Connolly on Vocals)</li>
+      <li>Lawyers, Guns and Money (Warren Zevon cover)</li>
+      <li>Pink Skies</li>
+      <li>Plastic Cigarettes (Unreleased)</li>
+      <li>I Remember Everything</li>
+      <li>Nine Ball</li>
+      <li>Hey Driver</li>
+      <li>Burn, Burn, Burn</li>
+      <li>Heading South</li>
+      <li>Quittin' Time</li>
 
+
+ 
+
+<li class="encore">Revival (Performed on B stage)</li>
+
+    </ol>
   </main>
   <footer>
     <h1 class="footer">ZACH BRYAN CONCERT 2025</h1>
