--- a/setlist.html
+++ b/setlist.html
@@ -44,7 +44,7 @@
     </script>
   </header>
   <main>
-    <h2>Setlist: </h2>
+    <h2 class="setlist"> Setlist: </h2>
     <ol>
       <li>Overtime</li>
       <li>Open the Gate</li>
