--- a/media.html
+++ b/media.html
@@ -49,40 +49,41 @@
       <div class="row">
         <div class="col">
           <div class="ratio ratio-16x9">
-            <div class="card revival-card" ;">
-              <video src="/REVIVAL.mov" class="rounded img img-fluid w-75 mx-auto d-block REVIVAL" allowfullscreen
+            <div class="card revival-card" ;>
+              <video src="/REVIVAL.mov" class="rounded img img-fluid py-auto mx-auto d-block REVIVAL" allowfullscreen
                 autoplay alt="...">
                 <!-- got video from my phone -->
             </div>
           </div>
           <h1 class="card-text revival mx-auto">REVIVAL</h2>
             <h3 class="card-text revivals mx-auto">Time: 18 minutes 36 seconds</h4>
-
-              <div id="carouselExample" class="carousel slide">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="/concert.jpg" class="d-block w-100" alt="...">
+              <div class="carousel">
+                <div id="carouselExample" class="carousel slide">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img src="/concert.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="/zach.jpg" class="d-block carousel" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="bryan.jpg" class="d-block carousel" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <video src="opening.mov" class="d-block carousel" autoplay alt="...">
+                    </div>
                   </div>
-                  <div class="carousel-item">
-                    <img src="/zach.jpg" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="bryan.jpg" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <video src="opening.mov" class="d-block w-100" autoplay alt="...">
-                  </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
-                  data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
-                  data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
               </div>
               <!-- all imgs and videos are taken by me -->
   </main>
