removed all the /

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <img src="/ZachBryan.jpg" class="rounded img img-fluid w-75 mx-auto d-block zach-bryan" alt="...">
+          <img src="ZachBryan.jpg" class="rounded img img-fluid w-75 mx-auto d-block zach-bryan" alt="...">
           <!-- got img from "https://www.rollingstone.com/music/music-news/zach-bryan-uses-ticketmaster-for-2024-tour-1234818815/" -->
         </div>
         <div class="info">
@@ -67,8 +67,8 @@
         <th scope="col">
           <h2>Social:</h2>
         </th>
-        <th scope="col"><a href="https://www.instagram.com/zachlanebryan/?hl=en"> <img src="/insta.png" alt=""></a></th>
-        <th scope="col"><a href="https://www.tiktok.com/@zachlanebryan?lang=en"> <img src="/tiktok.png" alt=""></a></th>
+        <th scope="col"><a href="https://www.instagram.com/zachlanebryan/?hl=en"> <img src="insta.png" alt=""></a></th>
+        <th scope="col"><a href="https://www.tiktok.com/@zachlanebryan?lang=en"> <img src="tiktok.png" alt=""></a></th>
       </tr>
   </footer>
   <!-- Bootstrap JavaScript Libraries -->
