--- a/outfits.html
+++ b/outfits.html
@@ -54,7 +54,7 @@
               <div class="card-body">
                 <a
                   href="https://www.amazon.com/dp/B09WHLP9MN?ref=cm_sw_r_cso_cp_apin_dp_AFKAQ97W5676KEXP5646_1&ref_=cm_sw_r_cso_cp_apin_dp_AFKAQ97W5676KEXP5646_1&social_share=cm_sw_r_cso_cp_apin_dp_AFKAQ97W5676KEXP5646_1&th=1&psc=1">
-                  <img src="/hat.png" class="card-img-top" alt="hat"></a>
+                  <img src="hat.png" class="card-img-top" alt="hat"></a>
 
                 <p class="card-text">Cowgirl Hat</p>
               </div>
@@ -68,7 +68,7 @@
               <div class="card-body">
                 <a
                   href="https://www.amazon.com/dp/B0C5MCCKVJ?ref=cm_sw_r_cso_cp_apin_dp_HBKVXYQXFZTMEG6CHMTS&ref_=cm_sw_r_cso_cp_apin_dp_HBKVXYQXFZTMEG6CHMTS&social_share=cm_sw_r_cso_cp_apin_dp_HBKVXYQXFZTMEG6CHMTS&titleSource=true&th=1">
-                  <img src="/earings.png" class="card-img-top" alt="earings"></a>
+                  <img src="earings.png" class="card-img-top" alt="earings"></a>
 
                 <p class="card-text">Earings</p>
               </div>
@@ -81,7 +81,7 @@
               <div class="card-body">
                 <a
                   href="https://www.amazon.com/dp/B09WHLP9MN?ref=cm_sw_r_cso_cp_apin_dp_AFKAQ97W5676KEXP5646_1&ref_=cm_sw_r_cso_cp_apin_dp_AFKAQ97W5676KEXP5646_1&social_share=cm_sw_r_cso_cp_apin_dp_AFKAQ97W5676KEXP5646_1&th=1&psc=1">
-                  <img src="/boots.png" class="card-img-top" alt="boots"></a>
+                  <img src="boots.png" class="card-img-top" alt="boots"></a>
                 <p class="card-text">Boots</p>
               </div>
             </div>
@@ -94,7 +94,7 @@
             <div class="card-body">
               <a
                 href="https://www.amazon.com/dp/B09WHLP9MN?ref=cm_sw_r_cso_cp_apin_dp_AFKAQ97W5676KEXP5646_1&ref_=cm_sw_r_cso_cp_apin_dp_AFKAQ97W5676KEXP5646_1&social_share=cm_sw_r_cso_cp_apin_dp_AFKAQ97W5676KEXP5646_1&th=1&psc=1">
-                <img src="/shirt.png" class="card-img-top" alt="shirt"></a>
+                <img src="shirt.png" class="card-img-top" alt="shirt"></a>
               <p class="card-text">Shirt</p>
               <p class="s">Got it from forever 21 but cant find the link so similar one is from amazon. </p>
             </div>
@@ -105,7 +105,7 @@
             <div class="card-body">
               <a
                 href="https://www.amazon.com/DEICAEVO-Skirts-Casual-Stretch-Waisted/dp/B0DFCGT34S/ref=sr_1_2_sspa?crid=1W9MHLBS0W3IH&dib=eyJ2IjoiMSJ9.k0u4aTVeRZmFJBqX4jHBnB-t24ZK8dPbtcZSD83NliwcZIFez_HS4_5t3IrcMYIudiHDjAi2B269y9SWyWa7LT5ue3DT7mATQ4JICmCkt6wG1vaoLNM9RcoBfodgzF0vrDJe05hRo9pJ4iub-DeZC1d242VrFgU3ZTNi9rGMUgnRdRRTyeBO9sCX7fxUfp5_hCGeZmbowZF0JWbeSBofKnstP3jcGD8cDGwt6wh_0Oahc56kHx6Dg1U-GO7hCVse7KVC4NxWPKgqQgxU0xNrpCnuCcPJRzHVLm6Ut7qDsq0.WKQxrOmGCdNA_b4_kD5q7b7G60ByMc19Qqr8EzLy4Cc&dib_tag=se&keywords=jean%2Bskirts&qid=1758742085&sprefix=jean%2Bskirt%2Caps%2C211&sr=8-2-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY&th=1&psc=1">
-                <img src="/skirt.png" class="card-img-top" alt="skirt"></a>
+                <img src="skirt.png" class="card-img-top" alt="skirt"></a>
               <p class="card-text">Skirt</p>
               <p class="s">Borrowed from my friend dont know where it is from. You can find a similar one on amazon.
               </p>
@@ -119,7 +119,7 @@
           <div class="card h-70">
             <div class="card-body">
               <a href="https://merchzachbryan.com/products/zach-bryan-tour-merch-logo-camo-hoodie">
-                <img src="/sweatshirt.png" class="card-img-top" alt="sweatshirt"></a>
+                <img src="sweatshirt.png" class="card-img-top" alt="sweatshirt"></a>
               <p class="card-text">Sweatshirt</p>
             </div>
           </div>
@@ -128,7 +128,7 @@
           <div class="card h-60">
             <div class="card-body">
               <a href="https://zachbryanshop.com/products/zach-bryan-2025-lightning-tee">
-                <img src="/t-shirt.png" class="card-img-top" alt="t-shirt"></a>
+                <img src="t-shirt.png" class="card-img-top" alt="t-shirt"></a>
               <p class="card-text">T-Shirt</p>
             </div>
           </div>
@@ -144,9 +144,9 @@
         <th scope="col">
           <h2>Social:</h2>
         </th>
-        <th scope="col"><a href="https://www.instagram.com/zachlanebryan/?hl=en"> <img src="/insta.png" alt=""></a>
+        <th scope="col"><a href="https://www.instagram.com/zachlanebryan/?hl=en"> <img src="insta.png" alt=""></a>
         </th>
-        <th scope="col"><a href="https://www.tiktok.com/@zachlanebryan?lang=en"> <img src="/tiktok.png" alt=""></a>
+        <th scope="col"><a href="https://www.tiktok.com/@zachlanebryan?lang=en"> <img src="tiktok.png" alt=""></a>
         </th>
       </tr>
   </footer>
