--- a/setlist.html
+++ b/setlist.html
@@ -85,8 +85,8 @@
         <th scope="col">
           <h2>Social:</h2>
         </th>
-        <th scope="col"><a href="https://www.instagram.com/zachlanebryan/?hl=en"> <img src="/insta.png" alt=""></a></th>
-        <th scope="col"><a href="https://www.tiktok.com/@zachlanebryan?lang=en"> <img src="/tiktok.png" alt=""></a></th>
+        <th scope="col"><a href="https://www.instagram.com/zachlanebryan/?hl=en"> <img src="insta.png" alt=""></a></th>
+        <th scope="col"><a href="https://www.tiktok.com/@zachlanebryan?lang=en"> <img src="tiktok.png" alt=""></a></th>
       </tr>
   </footer>
   <!-- Bootstrap JavaScript Libraries -->
