--- a/media.html
+++ b/media.html
@@ -50,7 +50,7 @@
         <div class="col">
           <div class="ratio ratio-16x9">
             <div class="card revival-card" ;>
-              <video src="/REVIVAL.mov" class="rounded img img-fluid py-auto mx-auto d-block REVIVAL" allowfullscreen
+              <video src="REVIVAL.mov" class="rounded img img-fluid py-auto mx-auto d-block REVIVAL" allowfullscreen
                 autoplay alt="...">
                 <!-- got video from my phone -->
             </div>
@@ -61,10 +61,10 @@
                 <div id="carouselExample" class="carousel slide">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img src="/concert.jpg" class="d-block w-100" alt="...">
+                      <img src="concert.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                      <img src="/zach.jpg" class="d-block carousel" alt="...">
+                      <img src="zach.jpg" class="d-block carousel" alt="...">
                     </div>
                     <div class="carousel-item">
                       <img src="bryan.jpg" class="d-block carousel" alt="...">
@@ -95,8 +95,8 @@
         <th scope="col">
           <h2>Social:</h2>
         </th>
-        <th scope="col"><a href="https://www.instagram.com/zachlanebryan/?hl=en"> <img src="/insta.png" alt=""></a></th>
-        <th scope="col"><a href="https://www.tiktok.com/@zachlanebryan?lang=en"> <img src="/tiktok.png" alt=""></a></th>
+        <th scope="col"><a href="https://www.instagram.com/zachlanebryan/?hl=en"> <img src="insta.png" alt=""></a></th>
+        <th scope="col"><a href="https://www.tiktok.com/@zachlanebryan?lang=en"> <img src="tiktok.png" alt=""></a></th>
       </tr>
   </footer>
   <!-- Bootstrap JavaScript Libraries -->
