think i fixed videos

--- a/media.html
+++ b/media.html
@@ -50,7 +50,7 @@
         <div class="col">
           <div class="ratio ratio-16x9">
             <div class="card revival-card" ;>
-              <video src="REVIVAL.mov" class="rounded img img-fluid py-auto mx-auto d-block REVIVAL" allowfullscreen
+              <video src="/REVIVAL.mov" class="rounded img img-fluid py-auto mx-auto d-block REVIVAL" allowfullscreen
                 autoplay alt="...">
                 <!-- got video from my phone -->
             </div>
@@ -70,7 +70,7 @@
                       <img src="bryan.jpg" class="d-block carousel" alt="...">
                     </div>
                     <div class="carousel-item">
-                      <video src="opening.mov" class="d-block carousel" autoplay alt="...">
+                      <video src="/opening.mov" class="d-block carousel" autoplay alt="...">
                     </div>
                   </div>
                   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
